--- a/css/liquid.css
+++ b/css/liquid.css
@@ -9,6 +9,10 @@ body {
     -ms-user-select: none;
 }
 
+#canvas {
+  background-color: rgba(158, 167, 184, 0.2);
+}
+
 #start-button {
     color: white;
     font-size: 16px;
